[package]
name = "discord-interviews"
version = "0.1.0"
authors = ["Ran Magen <enricomagen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
env_logger = "0.8.3"
futures = "0.3.15"
log = "0.4.14"
